--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,21 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.679.0",
+    "@aws-sdk/client-dynamodb": "^3.679.0",
+    "@aws-sdk/lib-dynamodb": "^3.679.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "socket.io": "^4.8.1",
+    "uuid": "^11.0.4",
     "ws": "^8.18.3",
     "y-websocket": "^3.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js"
   }
 }
