--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite --open /midi-editor-vite.html",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@tonejs/midi": "^2.0.28",
     "socket.io-client": "^4.8.1",
     "tone": "^15.1.22",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   }
 }
