--- a/audio-midi/requirements.txt
+++ b/audio-midi/requirements.txt
@@ -1,25 +1,22 @@
-# Audio-to-MIDI transcription requirements
-# Main package for audio transcription
-basic-pitch==0.4.0
+# Audio Processing & MIDI Transcription Dependencies
 
-# Core dependencies (installed automatically with basic-pitch)
-librosa>=0.8.0
-numpy>=1.18
-scipy>=1.4.1
-scikit-learn>=0.17,<1.6.0
-pretty-midi>=0.2.9
-mir-eval>=0.6
-resampy>=0.2.2,<0.4.3
-typing-extensions>=4.0.0
-coremltools>=8.0.0
+# Basic Pitch - main MIDI transcription
+basic-pitch>=0.2.6
 
-# Audio processing dependencies
-soundfile>=0.12.1
-audioread>=2.1.9
-soxr>=0.3.2
+# Demucs - audio source separation
+demucs
 
-# MIDI processing
-mido>=1.1.16
+# Audio processing
+librosa>=0.10.0
+soundfile>=0.12.0
+numpy>=1.24.0
+scipy>=1.10.0
+
+# MIDI handling
+mido>=1.3.0
+
+# ML/Deep Learning (required by demucs and basic-pitch)
+torch>=2.0.0
 
 # Web server dependencies for MIDI editor
 flask>=3.0.0
