--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,19 +15,17 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.679.0",
     "@aws-sdk/client-dynamodb": "^3.679.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
+    "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.4",
     "ws": "^8.18.3",
     "y-websocket": "^3.0.0"
-  },
-  "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
   }
 }
