--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
   "type": "module",
   "dependencies": {
     "@tonejs/midi": "^2.0.28",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "socket.io-client": "^4.8.1",
     "tone": "^15.1.22",
     "y-websocket": "^3.0.0",
