--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "music-metadata": "^7.14.0",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.4",
