refactor: Rename VYBE to MUSE across documentation and scripts
- Updated all references from VYBE to MUSE in documentation files, including AWS setup, deployment guides, and integration summaries.
- Renamed variables and configurations in scripts to reflect the new MUSE branding.
- Adjusted backend and frontend configurations to ensure consistent naming and functionality.
- Enhanced clarity in setup and deployment instructions for the MUSE application.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-# Top-level Python requirements for MÜSE VYBE
+# Top-level Python requirements for MUSE
 # Delegates to the audio/MIDI editor requirements.
 -r audio-midi/requirements.txt
